<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.oppus.com.myoppus.CustomerActivityFragment"
    tools:showIn="@layout/activity_customer">

    <TextView
        android:id="@+id/customerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/customeractivityemail"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/customeractivityemail"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:width="150dp"
        android:text="@string/customeractivitytextview"
        tools:textSize="18sp" />

    <EditText
        android:id="@+id/customeractivityemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customerActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/customeractivityemail"
        tools:textAlignment="center" />

    <EditText
        android:id="@+id/customeractivitypasswrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customeractivityemail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/customeractivitypassword"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/customerlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/customeractivitypasswrd"
        android:layout_alignStart="@+id/customeractivitypasswrd"
        android:layout_below="@+id/customeractivitypasswrd"
        android:width="100dp"
        android:text="@string/customerloginbutton" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/customerlogin"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_toEndOf="@+id/customerlogin"
        android:layout_toRightOf="@+id/customerlogin"
        android:width="100dp"
        android:text="@string/customerregisterbutton" />

</RelativeLayout>
